--- a/Winform/Caist.Framework_Tools/Caist.Framework.Service/FrmMian.resx
+++ b/Winform/Caist.Framework_Tools/Caist.Framework.Service/FrmMian.resx
@@ -169,7 +169,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABE
-        CQAAAk1TRnQBSQFMAgEBAgEAAbABBAGwAQQBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        CQAAAk1TRnQBSQFMAgEBAgEAAdgBBAHYAQQBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABQAMAARADAAEBAQABCAYAAQQYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
@@ -214,6 +214,79 @@
   <metadata name="PlcTool.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>384, 16</value>
   </metadata>
+  <metadata name="MqtTool.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>297, 59</value>
+  </metadata>
+  <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>687, 20</value>
+  </metadata>
+  <metadata name="SystemImage.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>253, 16</value>
+  </metadata>
+  <data name="SystemImage.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABU
+        DQAAAk1TRnQBSQFMAgEBBQEAARABBQEQAQUBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABQAMAASADAAEBAQABCAYAAQgYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
+        AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
+        AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
+        AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
+        AZkCAAFmAcwCAAFmAf8CAAGZAwABmQEzAgABmQFmAgACmQIAAZkBzAIAAZkB/wIAAcwDAAHMATMCAAHM
+        AWYCAAHMAZkCAALMAgABzAH/AgAB/wFmAgAB/wGZAgAB/wHMAQABMwH/AgAB/wEAATMBAAEzAQABZgEA
+        ATMBAAGZAQABMwEAAcwBAAEzAQAB/wEAAf8BMwIAAzMBAAIzAWYBAAIzAZkBAAIzAcwBAAIzAf8BAAEz
+        AWYCAAEzAWYBMwEAATMCZgEAATMBZgGZAQABMwFmAcwBAAEzAWYB/wEAATMBmQIAATMBmQEzAQABMwGZ
+        AWYBAAEzApkBAAEzAZkBzAEAATMBmQH/AQABMwHMAgABMwHMATMBAAEzAcwBZgEAATMBzAGZAQABMwLM
+        AQABMwHMAf8BAAEzAf8BMwEAATMB/wFmAQABMwH/AZkBAAEzAf8BzAEAATMC/wEAAWYDAAFmAQABMwEA
+        AWYBAAFmAQABZgEAAZkBAAFmAQABzAEAAWYBAAH/AQABZgEzAgABZgIzAQABZgEzAWYBAAFmATMBmQEA
+        AWYBMwHMAQABZgEzAf8BAAJmAgACZgEzAQADZgEAAmYBmQEAAmYBzAEAAWYBmQIAAWYBmQEzAQABZgGZ
+        AWYBAAFmApkBAAFmAZkBzAEAAWYBmQH/AQABZgHMAgABZgHMATMBAAFmAcwBmQEAAWYCzAEAAWYBzAH/
+        AQABZgH/AgABZgH/ATMBAAFmAf8BmQEAAWYB/wHMAQABzAEAAf8BAAH/AQABzAEAApkCAAGZATMBmQEA
+        AZkBAAGZAQABmQEAAcwBAAGZAwABmQIzAQABmQEAAWYBAAGZATMBzAEAAZkBAAH/AQABmQFmAgABmQFm
+        ATMBAAGZATMBZgEAAZkBZgGZAQABmQFmAcwBAAGZATMB/wEAApkBMwEAApkBZgEAA5kBAAKZAcwBAAKZ
+        Af8BAAGZAcwCAAGZAcwBMwEAAWYBzAFmAQABmQHMAZkBAAGZAswBAAGZAcwB/wEAAZkB/wIAAZkB/wEz
+        AQABmQHMAWYBAAGZAf8BmQEAAZkB/wHMAQABmQL/AQABzAMAAZkBAAEzAQABzAEAAWYBAAHMAQABmQEA
+        AcwBAAHMAQABmQEzAgABzAIzAQABzAEzAWYBAAHMATMBmQEAAcwBMwHMAQABzAEzAf8BAAHMAWYCAAHM
+        AWYBMwEAAZkCZgEAAcwBZgGZAQABzAFmAcwBAAGZAWYB/wEAAcwBmQIAAcwBmQEzAQABzAGZAWYBAAHM
+        ApkBAAHMAZkBzAEAAcwBmQH/AQACzAIAAswBMwEAAswBZgEAAswBmQEAA8wBAALMAf8BAAHMAf8CAAHM
+        Af8BMwEAAZkB/wFmAQABzAH/AZkBAAHMAf8BzAEAAcwC/wEAAcwBAAEzAQAB/wEAAWYBAAH/AQABmQEA
+        AcwBMwIAAf8CMwEAAf8BMwFmAQAB/wEzAZkBAAH/ATMBzAEAAf8BMwH/AQAB/wFmAgAB/wFmATMBAAHM
+        AmYBAAH/AWYBmQEAAf8BZgHMAQABzAFmAf8BAAH/AZkCAAH/AZkBMwEAAf8BmQFmAQAB/wKZAQAB/wGZ
+        AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
+        AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
+        AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/0gAAgc+AALvOQAB8wEJ
+        Ad0C8wLvAvMC3QHzMwABCQHUAdUB3QEHAesC9wHrAe8B3QHVAdQBCTEAAd0B1QHzAwAB7wLrAe8DAAHz
+        AdUB3TAAAdUBGQUAAuwFAAEZAdUwAAHUAfMMAAHzAdQwAAHcAQkMAALcMAAB8wHVAQkB/wgAAf8BGQHU
+        AfMxAAEZAdUB1AEJBgABCQHUAdUBGTMAAf8B3QHUARkEAAEZAdQB3QH/NgAB3QHUAdwCGQHcAdQB3TkA
+        AfMBCQLVAQkB88UAAbUBzw2uAbUBAA7/EQAQ/wHPC/8D9AHPAQAB/wH0AQcBdAFLBEUBSwFuAZMB8wH/
+        BwAI/wIAAXQNTAF0Af8BzwH/AvQBEQX0AekB9ALzAf8BzwEAAf8BSwF0AZkBGwGaAXoBWAFSA0wBSwH/
+        AQAH/wEaAXQBTAFLAXQB9AH/AgABTAGaDHoBTAH/AbQB/wL0AREF9AHpA/QB/wHPAQAB/wFLAZoBwwH2
+        AaABegFZAVICTAFSAUsB/wEAAvQB/wH0AfAB7wH/AUwBUgFTAXoBUgG8Af8CAAFMAZoLQwF6AUwB/wG0
+        Af8C9AFDA/QBbwPpAW8B9AH/Ac8BAAH/AUsBmgL2AcMBmgF6AXQBTAJSAUsB/wEAAfMBkQKLAbQBiwH0
+        AZkBUgFTAXoBdAGTAf8CAAFMAZoBQwFmA/8FZgFDAXoBTAH/AbQB/wL0AUMD9AHpAW8BTAFvAekB9AH/
+        AbQBAAH/AUwBmQIaAXQCUgFMAUsBTAFSAUsB/wEAAf8BkQEJAboBtAGzAfABGgFSAnoBmgFMAv8BAAFM
+        AZoBFQkSARUBegFMAf8BtAH/AW0DQwFtAfQBRQFvAUwBbwHpAfQB/wG0AQAB/wF0AZkBGgH2AcMBmgF6
+        AXQCTAFSAXQB/wEAAf8CuwHcArQBuwH0AVIBdANMAfMB/wEAAVIBmgEVCeoBFQF6AUwB/wG0Af8BFQP0
+        AUMB/wFGARYCbwFFAfQB/wG0AQAB/wFMAcMC9gHDAZoBegF0AlIBdAFLAf8BAAH/AfEBtAEJAbsCtAH/
+        AZkBGgH0Af8C9AH/AQABUgHDARQBbAJtBK4CbQEUAXoBTAH/AbQB/wEVA/8BFQH/AUYBFgFvARYBRgH0
+        Af8BtAEAAf8BUgHDAfYB/wHDAZoCegJSAXoBSwH/AQAC/wG7ArQBtQHwAv8BvAFzAUoBSQFzAfQB/wF0
+        AcMBZgmuAWYBegFSAf8BtAH/ARQD/wEVAf8BRgGTAW8BkwFGAv8BtAEAAf8BdAGaAhoBeQF0AVIDTAFS
+        AUsB/wIAAf8C9AH/AfQBGgGTAf8CUAFRAXkBUAG8Af8BdAHDARQJrgFmAXoBUgH/AbQB/wHrA2YB6wH/
+        AUYDlAFGAv8BtAEAAf8BdAGZARsB9gHDAZoBegF5A1IBdAH/AgAB/wH0A0YBTAFFAf8BHAFQAVECeAEc
+        Af8BdAHDAWYJkQFmAXoBUgH/AbUD/wFmA/8BbwNGAW8C/wG0AQAB/wF0AcMB9gH/AcMBmgJ6AVIBdAF6
+        AUwB/wMAAf8BRgGaAeMBFwFGAvABUAFRAXgBmQFKAf8BdAHDC2YBmgF0Af8BtQP/ARMF/wFGBP8BtAEA
+        Af8BdAHDAfYB/wHDAZoCegJ0AXoBUgH/AwAB/wGTAnUBFwFGAZMB/wVQAfMBdAL2C8MBdAH/AbUD/wES
+        Bf8BRgT/AbQBAAH/AXQG9gLDARoBmgFSAf8DAAH/ARoBbwGUARYBbwFMAf8BmQHxAfQB/wL0AZkNdAGZ
+        Af8BtQ7/AbUBAAH/AXkBmQEaARsB9gPDApoBmQF0Af8EAAH2AZMBRgFMAZMBGgT/AQAS/wG8DrUBvAEA
+        Av8BGgKZBHQCmQEaAfQB/wUABf8HAAFCAU0BPgcAAT4DAAEoAwABQAMAASADAAEBAQABAQYAAQEWAAP/
+        AQAC/wYAAf4BfwYAAf4BfwYAAcABAwYAAYABAQYAARwBOAYAAT4BfAYAAT8B/AYAAT8B/AYAAQ8B8AYA
+        AYcB4QYAAsMGAAHwAQ8GAAH4AR8GAAL/BgAC/wYAAv8CAAGAAQEC/wQAAYABAQH8AQMEAAGAAQEBAAED
+        BAABgAEBAQABAwQAAYABAQEAAQMEAAGAAQEBAAEBBAABgAEBAQABAQQAAYABAQEAAQEEAAGAAQEGAAGA
+        AQEBgAUAAYABAQGABQABgAEBAcAFAAGAAQEBwAUAAYABAQHABQABgAEBAeABBAQAAYABAQHwAX8L
+</value>
+  </data>
   <data name="btnPLCStrats.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
@@ -316,73 +389,6 @@
         /JZUiexGnqddVdY/ZYN94iK1wq3zAhcYRSeBNfPG3IpqQZdYaHBcfmIZOFzh+LnGZ9Kx4sowyuuGcdb1
         GGcuPUKZM4LTtUM4eSGM0vMhnKgJ4Xh1ECVVQRx13I3LJdqP/cQBm4N/AOt2E/w//NcQYg2/djhrFH5O
         GAAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <metadata name="SystemImage.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>253, 16</value>
-  </metadata>
-  <data name="SystemImage.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
-    <value>
-        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
-        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABU
-        DQAAAk1TRnQBSQFMAgEBBQEAAegBBAHoAQQBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
-        AwABQAMAASADAAEBAQABCAYAAQgYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
-        AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
-        AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
-        AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
-        AZkCAAFmAcwCAAFmAf8CAAGZAwABmQEzAgABmQFmAgACmQIAAZkBzAIAAZkB/wIAAcwDAAHMATMCAAHM
-        AWYCAAHMAZkCAALMAgABzAH/AgAB/wFmAgAB/wGZAgAB/wHMAQABMwH/AgAB/wEAATMBAAEzAQABZgEA
-        ATMBAAGZAQABMwEAAcwBAAEzAQAB/wEAAf8BMwIAAzMBAAIzAWYBAAIzAZkBAAIzAcwBAAIzAf8BAAEz
-        AWYCAAEzAWYBMwEAATMCZgEAATMBZgGZAQABMwFmAcwBAAEzAWYB/wEAATMBmQIAATMBmQEzAQABMwGZ
-        AWYBAAEzApkBAAEzAZkBzAEAATMBmQH/AQABMwHMAgABMwHMATMBAAEzAcwBZgEAATMBzAGZAQABMwLM
-        AQABMwHMAf8BAAEzAf8BMwEAATMB/wFmAQABMwH/AZkBAAEzAf8BzAEAATMC/wEAAWYDAAFmAQABMwEA
-        AWYBAAFmAQABZgEAAZkBAAFmAQABzAEAAWYBAAH/AQABZgEzAgABZgIzAQABZgEzAWYBAAFmATMBmQEA
-        AWYBMwHMAQABZgEzAf8BAAJmAgACZgEzAQADZgEAAmYBmQEAAmYBzAEAAWYBmQIAAWYBmQEzAQABZgGZ
-        AWYBAAFmApkBAAFmAZkBzAEAAWYBmQH/AQABZgHMAgABZgHMATMBAAFmAcwBmQEAAWYCzAEAAWYBzAH/
-        AQABZgH/AgABZgH/ATMBAAFmAf8BmQEAAWYB/wHMAQABzAEAAf8BAAH/AQABzAEAApkCAAGZATMBmQEA
-        AZkBAAGZAQABmQEAAcwBAAGZAwABmQIzAQABmQEAAWYBAAGZATMBzAEAAZkBAAH/AQABmQFmAgABmQFm
-        ATMBAAGZATMBZgEAAZkBZgGZAQABmQFmAcwBAAGZATMB/wEAApkBMwEAApkBZgEAA5kBAAKZAcwBAAKZ
-        Af8BAAGZAcwCAAGZAcwBMwEAAWYBzAFmAQABmQHMAZkBAAGZAswBAAGZAcwB/wEAAZkB/wIAAZkB/wEz
-        AQABmQHMAWYBAAGZAf8BmQEAAZkB/wHMAQABmQL/AQABzAMAAZkBAAEzAQABzAEAAWYBAAHMAQABmQEA
-        AcwBAAHMAQABmQEzAgABzAIzAQABzAEzAWYBAAHMATMBmQEAAcwBMwHMAQABzAEzAf8BAAHMAWYCAAHM
-        AWYBMwEAAZkCZgEAAcwBZgGZAQABzAFmAcwBAAGZAWYB/wEAAcwBmQIAAcwBmQEzAQABzAGZAWYBAAHM
-        ApkBAAHMAZkBzAEAAcwBmQH/AQACzAIAAswBMwEAAswBZgEAAswBmQEAA8wBAALMAf8BAAHMAf8CAAHM
-        Af8BMwEAAZkB/wFmAQABzAH/AZkBAAHMAf8BzAEAAcwC/wEAAcwBAAEzAQAB/wEAAWYBAAH/AQABmQEA
-        AcwBMwIAAf8CMwEAAf8BMwFmAQAB/wEzAZkBAAH/ATMBzAEAAf8BMwH/AQAB/wFmAgAB/wFmATMBAAHM
-        AmYBAAH/AWYBmQEAAf8BZgHMAQABzAFmAf8BAAH/AZkCAAH/AZkBMwEAAf8BmQFmAQAB/wKZAQAB/wGZ
-        AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
-        AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
-        AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
-        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/0gAAgc+AALvOQAB8wEJ
-        Ad0C8wLvAvMC3QHzMwABCQHUAdUB3QEHAesC9wHrAe8B3QHVAdQBCTEAAd0B1QHzAwAB7wLrAe8DAAHz
-        AdUB3TAAAdUBGQUAAuwFAAEZAdUwAAHUAfMMAAHzAdQwAAHcAQkMAALcMAAB8wHVAQkB/wgAAf8BGQHU
-        AfMxAAEZAdUB1AEJBgABCQHUAdUBGTMAAf8B3QHUARkEAAEZAdQB3QH/NgAB3QHUAdwCGQHcAdQB3TkA
-        AfMBCQLVAQkB88UAAbUBzw2uAbUBAA7/EQAQ/wHPC/8D9AHPAQAB/wH0AQcBdAFLBEUBSwFuAZMB8wH/
-        BwAI/wIAAXQNTAF0Af8BzwH/AvQBEQX0AekB9ALzAf8BzwEAAf8BSwF0AZkBGwGaAXoBWAFSA0wBSwH/
-        AQAH/wEaAXQBTAFLAXQB9AH/AgABTAGaDHoBTAH/AbQB/wL0AREF9AHpA/QB/wHPAQAB/wFLAZoBwwH2
-        AaABegFZAVICTAFSAUsB/wEAAvQB/wH0AfAB7wH/AUwBUgFTAXoBUgG8Af8CAAFMAZoLQwF6AUwB/wG0
-        Af8C9AFDA/QBbwPpAW8B9AH/Ac8BAAH/AUsBmgL2AcMBmgF6AXQBTAJSAUsB/wEAAfMBkQKLAbQBiwH0
-        AZkBUgFTAXoBdAGTAf8CAAFMAZoBQwFmA/8FZgFDAXoBTAH/AbQB/wL0AUMD9AHpAW8BTAFvAekB9AH/
-        AbQBAAH/AUwBmQIaAXQCUgFMAUsBTAFSAUsB/wEAAf8BkQEJAboBtAGzAfABGgFSAnoBmgFMAv8BAAFM
-        AZoBFQkSARUBegFMAf8BtAH/AW0DQwFtAfQBRQFvAUwBbwHpAfQB/wG0AQAB/wF0AZkBGgH2AcMBmgF6
-        AXQCTAFSAXQB/wEAAf8CuwHcArQBuwH0AVIBdANMAfMB/wEAAVIBmgEVCeoBFQF6AUwB/wG0Af8BFQP0
-        AUMB/wFGARYCbwFFAfQB/wG0AQAB/wFMAcMC9gHDAZoBegF0AlIBdAFLAf8BAAH/AfEBtAEJAbsCtAH/
-        AZkBGgH0Af8C9AH/AQABUgHDARQBbAJtBK4CbQEUAXoBTAH/AbQB/wEVA/8BFQH/AUYBFgFvARYBRgH0
-        Af8BtAEAAf8BUgHDAfYB/wHDAZoCegJSAXoBSwH/AQAC/wG7ArQBtQHwAv8BvAFzAUoBSQFzAfQB/wF0
-        AcMBZgmuAWYBegFSAf8BtAH/ARQD/wEVAf8BRgGTAW8BkwFGAv8BtAEAAf8BdAGaAhoBeQF0AVIDTAFS
-        AUsB/wIAAf8C9AH/AfQBGgGTAf8CUAFRAXkBUAG8Af8BdAHDARQJrgFmAXoBUgH/AbQB/wHrA2YB6wH/
-        AUYDlAFGAv8BtAEAAf8BdAGZARsB9gHDAZoBegF5A1IBdAH/AgAB/wH0A0YBTAFFAf8BHAFQAVECeAEc
-        Af8BdAHDAWYJkQFmAXoBUgH/AbUD/wFmA/8BbwNGAW8C/wG0AQAB/wF0AcMB9gH/AcMBmgJ6AVIBdAF6
-        AUwB/wMAAf8BRgGaAeMBFwFGAvABUAFRAXgBmQFKAf8BdAHDC2YBmgF0Af8BtQP/ARMF/wFGBP8BtAEA
-        Af8BdAHDAfYB/wHDAZoCegJ0AXoBUgH/AwAB/wGTAnUBFwFGAZMB/wVQAfMBdAL2C8MBdAH/AbUD/wES
-        Bf8BRgT/AbQBAAH/AXQG9gLDARoBmgFSAf8DAAH/ARoBbwGUARYBbwFMAf8BmQHxAfQB/wL0AZkNdAGZ
-        Af8BtQ7/AbUBAAH/AXkBmQEaARsB9gPDApoBmQF0Af8EAAH2AZMBRgFMAZMBGgT/AQAS/wG8DrUBvAEA
-        Av8BGgKZBHQCmQEaAfQB/wUABf8HAAFCAU0BPgcAAT4DAAEoAwABQAMAASADAAEBAQABAQYAAQEWAAP/
-        AQAC/wYAAf4BfwYAAf4BfwYAAcABAwYAAYABAQYAARwBOAYAAT4BfAYAAT8B/AYAAT8B/AYAAQ8B8AYA
-        AYcB4QYAAsMGAAHwAQ8GAAH4AR8GAAL/BgAC/wYAAv8CAAGAAQEC/wQAAYABAQH8AQMEAAGAAQEBAAED
-        BAABgAEBAQABAwQAAYABAQEAAQMEAAGAAQEBAAEBBAABgAEBAQABAQQAAYABAQEAAQEEAAGAAQEGAAGA
-        AQEBgAUAAYABAQGABQABgAEBAcAFAAGAAQEBwAUAAYABAQHABQABgAEBAeABBAQAAYABAQHwAX8L
 </value>
   </data>
   <metadata name="timerSyncData.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
